framec_tests/language_specific/cpp/v3_outline/negative/pending/missing_brace.frm
@target cpp

system S {
    actions:
        fn doIt() 
}
